# conversational-sales

./: .env  .env.example  .gitignore  README.md  minimal_backend.py  product_plan.md  pyproject.toml
data/: product_embeddings.json  products.json  scraper_metadata.json  test_products.json
frontend/: config.js  server.py
frontend/static/: index.html  script.js  styles.css
scripts/: README.md  scraper_service.py
src/: README.md  __init__.py  conversation.py  data_provider.py  logging_config.py  main.py  models.py  product_search.py  scraper.py  upsell_data.py
